v1.2.0     * Update npm module versions.     * Add 'Senet' uplink endpoint.     * Change UplinkService to create a new sensor if a request is submitted for a sensor that doesn't exist.
